# opengl-base

./: .gitignore  CMakeLists.txt  README.md
cmake/: LinkGLFW.cmake  LinkTINYOBJLOADER.cmake
shader/: fragment.glsl  global_fragment.glsl  global_vertex.glsl  point_light_fragment.glsl  simple_color_fragment.glsl  simple_color_vertex.glsl  vertex.glsl
src/: camera.cpp  camera.h  cube.cpp  cube.h  flyingCamera.cpp  flyingCamera.h  geometry.h  light.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  openglbase.h  shader.cpp  shader.h  sphere.cpp  sphere.h  texture.cpp  texture.h
src/old/: camera.cpp  camera.h
